@startuml
title FTR-001 访客ID生成与管理 - Class Diagram

package "KMM Shared Module (commonMain)" {
  class GuestIdManager {
    - STORAGE_KEY: String = "GUEST_ID"
    - ID_PATTERN: Regex = Regex("^GUEST_\\d{13}_[a-z0-9]{8}$")
    
    + detectGuestId(localStorage: LocalStorage): String?
    + generateGuestId(localStorage: LocalStorage): String
    + validateGuestId(id: String): Boolean
    - generateRandomString(length: Int): String
    - getCurrentTimestamp(): Long
  }
  
  interface LocalStorage <<expect>> {
    + getString(key: String): String?
    + setString(key: String, value: String)
    + remove(key: String)
  }
  
  note right of GuestIdManager::detectGuestId
    FUN-001: 检测访客ID存在性
    从本地存储读取访客ID（跨平台）
    如果格式无效，清除并返回 null
  end note
  
  note right of GuestIdManager::generateGuestId
    FUN-002: 生成访客ID
    格式: GUEST_<timestamp>_<random>
    生成后立即存储（跨平台）
  end note
  
  note right of LocalStorage
    expect/actual 模式
    Android: SharedPreferences
    iOS: UserDefaults
  end note
}

package "Android Specific (androidMain)" <<actual>> {
  class "LocalStorage\n<<actual>>" as AndroidLocalStorage {
    - sharedPrefs: SharedPreferences
    
    + getString(key: String): String?
    + setString(key: String, value: String)
    + remove(key: String)
  }
  
  interface SharedPreferences <<Android Framework>> {
    + getString(key: String, defValue: String?): String?
    + edit(): Editor
  }
  
  note right of AndroidLocalStorage
    Android 平台实现
    使用 SharedPreferences
  end note
}

package "iOS Specific (iosMain)" <<actual>> {
  class "LocalStorage\n<<actual>>" as iOSLocalStorage {
    + getString(key: String): String?
    + setString(key: String, value: String)
    + remove(key: String)
  }
  
  note right of iOSLocalStorage
    iOS 平台实现
    使用 NSUserDefaults
    (P2 阶段)
  end note
}

package "Backend API" <<optional>> {
  interface UserGuestAPI <<external>> {
    + POST /api/v1/users/guest/register
    + Request: {}
    + Response: {guestId: String}
  }
  
  note right of UserGuestAPI
    后端访客注册接口（可选）
    用于将访客ID注册到后端
    Android 客户端生成ID后可选调用
  end note
}

GuestIdManager ..> LocalStorage : depends
LocalStorage <|.. AndroidLocalStorage : implements
LocalStorage <|.. iOSLocalStorage : implements
AndroidLocalStorage ..> SharedPreferences : uses
GuestIdManager ..> UserGuestAPI : optional\nregister

package "Models" {
  class GuestIdResponse {
    + guestId: String
  }
  
  class StorageException <<exception>> {
    + message: String
    + cause: Throwable?
  }
  
  note right of StorageException
    存储异常
    当 SharedPreferences 写入失败时抛出
  end note
}

GuestIdManager ..> GuestIdResponse : returns
GuestIdManager ..> StorageException : throws

@enduml
